tests/baselines/reference/unusedGetterInClass.errors.txt
tests/cases/compiler/unusedGetterInClass.ts(4,17): error TS6133: 'fullName' is declared but its value is never read.
tests/cases/compiler/unusedGetterInClass.ts(7,17): error TS6133: 'setter' is declared but its value is never read.


==== tests/cases/compiler/unusedGetterInClass.ts (2 errors) ====
    class Employee {
        private _fullName: string;
    
        private get fullName(): string {
                    ~~~~~~~~
!!! error TS6133: 'fullName' is declared but its value is never read.
            return this._fullName;
        }
        private set setter(_: string) {}
                    ~~~~~~
!!! error TS6133: 'setter' is declared but its value is never read.
    }